# norichat

./: .gitignore  README.md
.github/workflows/: build-client.yml  build-server.yml
client/: CMakeLists.txt
client/src/: main.cpp  state.h
client/src/net/: http_client.cpp  http_client.h  miniaudio_impl.cpp  voice_client.cpp  voice_client.h  ws_client.cpp  ws_client.h
client/src/ui/: login_screen.cpp  login_screen.h  main_screen.cpp  main_screen.h
docker/: Dockerfile
server/: CMakeLists.txt
server/src/: main.cpp
server/src/api/: api.cpp  api.h
server/src/auth/: auth.cpp  auth.h
server/src/db/: db.cpp  db.h
server/src/ws/: ws.cpp  ws.h
shared/protocol/: messages.h
